cloudformation/vpc.yml
---
Description: Creates the VPC, routing tables, and subnets for Givesource
Mappings:
  IpRange:
    us-east-1:
      '016226103026': '172.32'
      '948629139753': '172.132'
    us-east-2:
      '016226103026': '172.33'
      '948629139753': '172.133'
    us-west-1:
      '016226103026': '172.34'
      '948629139753': '172.134'
    us-west-2:
      '016226103026': '172.35'
      '948629139753': '172.135'
  HostedZone:
    '016226103026':
        Name: 'prd.aws.srv.givesource.com'
    '948629139753':
        Name: 'dev.aws.srv.givesource.com'

Resources:
  HostedZone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: Zone for CNAME references used by Givesource
      Name: !FindInMap [HostedZone, !Ref 'AWS::AccountId', Name]

  ApiCachePolicy:
    Type: AWS::CloudFront::CachePolicy
    Properties:
      CachePolicyConfig:
        Comment: Policy for long lived caching with Givesource settings, contents, and files
        DefaultTTL: 86400
        MaxTTL: 31536000
        MinTTL: 1
        Name: Givesource-CachePolicy
        ParametersInCacheKeyAndForwardedToOrigin:
          CookiesConfig:
            CookieBehavior: none
          EnableAcceptEncodingGzip: true
          HeadersConfig:
            HeaderBehavior: whitelist
            Headers: [ "Authorization" ]
          QueryStringsConfig:
            QueryStringBehavior: all

  NoCachePolicy:
    Type: AWS::CloudFront::CachePolicy
    Properties:
      CachePolicyConfig:
        Comment: Policy for no caching with authorized headers for the admin area
        DefaultTTL: 0
        MaxTTL: 30
        MinTTL: 0
        Name: Givesource-NoCachePolicy
        ParametersInCacheKeyAndForwardedToOrigin:
          CookiesConfig:
            CookieBehavior: none
          EnableAcceptEncodingGzip: true
          HeadersConfig:
            HeaderBehavior: whitelist
            Headers: [ "Authorization" ]
          QueryStringsConfig:
            QueryStringBehavior: all

  longLivedCachingHeaderPolicy:
    Type: AWS::CloudFront::ResponseHeadersPolicy
    Properties:
      ResponseHeadersPolicyConfig:
        Name: CustomLongLivedCachingHeadersPolicy
        SecurityHeadersConfig:
          ContentSecurityPolicy:
            ContentSecurityPolicy: !Sub >-
              default-src 'none';
              base-uri 'none';
              img-src 'self';
              script-src 'none';
              font-src 'self';
              form-action 'none';
              frame-ancestors 'none';
              style-src 'self';
              object-src 'none';
            Override: false
          ContentTypeOptions:
            Override: false
          FrameOptions:
            FrameOption: DENY
            Override: false
          ReferrerPolicy:
            ReferrerPolicy: same-origin
            Override: false
          StrictTransportSecurity:
            AccessControlMaxAgeSec: 63072000
            IncludeSubdomains: true
            Preload: true
            Override: false
          XSSProtection:
            ModeBlock: true
            Protection: true
            Override: false
        CustomHeadersConfig:
          Items:
            - Header: Cache-Control
              Value: max-age=31536000
              Override: false

  mediumCachingHeaderPolicy:
    Type: AWS::CloudFront::ResponseHeadersPolicy
    Properties:
      ResponseHeadersPolicyConfig:
        Name: CustomMediumLivedCachingHeadersPolicy
        SecurityHeadersConfig:
          ContentSecurityPolicy:
            ContentSecurityPolicy: !Sub >-
              default-src 'none';
              base-uri 'none';
              img-src 'self';
              script-src 'none';
              font-src 'self';
              form-action 'none';
              frame-ancestors 'none';
              style-src 'self';
              object-src 'none';
            Override: false
          ContentTypeOptions:
            Override: false
          FrameOptions:
            FrameOption: DENY
            Override: false
          ReferrerPolicy:
            ReferrerPolicy: same-origin
            Override: false
          StrictTransportSecurity:
            AccessControlMaxAgeSec: 63072000
            IncludeSubdomains: true
            Preload: true
            Override: false
          XSSProtection:
            ModeBlock: true
            Protection: true
            Override: false
        CustomHeadersConfig:
          Items:
            - Header: Cache-Control
              Value: max-age=600
              Override: false

  shortLivedCachingHeaderPolicy:
    Type: AWS::CloudFront::ResponseHeadersPolicy
    Properties:
      ResponseHeadersPolicyConfig:
        Name: CustomShortLivedCachingHeadersPolicy
        SecurityHeadersConfig:
          ContentSecurityPolicy:
            ContentSecurityPolicy: !Sub >-
              default-src 'none';
              base-uri 'none';
              connect-src 'self' https://*.cloudfront.net https://*.amazonaws.com https://api.paymentspring.com https://vimeo.com
              https://www.google-analytics.com https://www.facebook.com;
              font-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com https://use.fontawesome.com;
              form-action 'self';
              frame-ancestors 'self';
              frame-src 'self' null https://www.youtube.com https://player.vimeo.com https://www.google.com/recaptcha/ https://recaptcha.google.com/recaptcha/;
              img-src 'self' data: www.googletagmanager.com www.google-analytics.com https://*.cloudfront.net https://www.facebook.com
              https://www.gravatar.com https://img.youtube.com https://i.vimeocdn.com https://cdnjs.cloudflare.com;
              script-src 'self' 'unsafe-inline' blob: https://www.google-analytics.com https://fonts.googleapis.com 
              https://use.fontawesome.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net/ https://www.google.com/recaptcha/ 
              https://www.gstatic.com/recaptcha/ https://www.googletagmanager.com/gtag/js https://connect.facebook.net https://www.facebook.com;
              style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com;
              object-src 'none';
            Override: false
          ContentTypeOptions:
            Override: false
          FrameOptions:
            FrameOption: DENY
            Override: false
          ReferrerPolicy:
            ReferrerPolicy: same-origin
            Override: false
          StrictTransportSecurity:
            AccessControlMaxAgeSec: 63072000
            IncludeSubdomains: true
            Preload: true
            Override: false
          XSSProtection:
            ModeBlock: true
            Protection: true
            Override: false
        CustomHeadersConfig:
          Items:
            - Header: Cache-Control
              Value: no-cache
              Override: true

  RecaptchaParameterStore:
    Type: AWS::SSM::Parameter
    Properties:
      Description: "The recaptcha key for all the Givesource(R) stacks."
      Name: "/recaptcha/secure/recaptcha-key"
      Type: String
      Value: "temp-must-change"

  # TODO: Should we transition to the global key for this?
  RecaptchaKey:
    Type: AWS::KMS::Key
    Properties:
      Description: Key used to encrypt/decrypt recaptcha key
      Enabled: true
      EnableKeyRotation: true
      KeyPolicy:
        Id: "Global-RecaptchaKey"
        Version: 2012-10-17
        Statement:
          - Sid: Recaptcha key policy
            Effect: Allow
            Principal:
              AWS:
                - !Sub arn:aws:iam::${AWS::AccountId}:root
            Action: kms:*
            Resource: '*'

  RecaptchaKeyAlias:
    Type: AWS::KMS::Alias
    Properties:
      AliasName: "alias/global/recaptcha/secure"
      TargetKeyId: !Ref RecaptchaKey

  internetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: givesource

  vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Sub
      - ${IpRange}.0.0/16
      - {IpRange: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']}
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: givesource
      - Key: Purpose
        Value: The VPC for Givesource

  flowLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub FlowLog/givesource/${vpc}
      RetentionInDays: 365

  flowLogsRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: vpc-flow-logs.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /
      Policies:
      - PolicyName: flowlog-log
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
            - ec2:CreateFlowLogs
            Resource: '*'
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy

  flowLog:
    Type: AWS::EC2::FlowLog
    Properties:
      DeliverLogsPermissionArn: !GetAtt flowLogsRole.Arn
      LogGroupName: !Ref flowLogGroup
      ResourceId: !Ref vpc
      ResourceType: VPC
      TrafficType: ALL

  attachInternetGatewayToVpc:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref internetGateway
      VpcId: !Ref vpc

  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: public-givesource

  internetGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref publicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetGateway

  primaryPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref primaryPublicSubnet
      RouteTableId: !Ref publicRouteTable

  primaryPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub
      - ${IpRange}.0.0/23
      - {IpRange: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']}
      AvailabilityZone: !Select [0, !GetAZs {Ref: 'AWS::Region'}]
      Tags:
      - Key: SubnetType
        Value: Public
      - Key: Name
        Value: primary-public-givesource

  secondaryPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref secondaryPublicSubnet
      RouteTableId: !Ref publicRouteTable

  secondaryPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub
      - ${IpRange}.2.0/23
      - {IpRange: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']}
      AvailabilityZone: !Select [1, !GetAZs {Ref: 'AWS::Region'}]
      Tags:
      - Key: SubnetType
        Value: Public
      - Key: Name
        Value: secondary-public-givesource

  primaryPrivateEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  primaryPrivateNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt primaryPrivateEip.AllocationId
      SubnetId: !Ref primaryPublicSubnet

  primaryPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: primary-private-givesource

  primaryPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref primaryPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref primaryPrivateNatGateway

  primaryPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub
      - ${IpRange}.10.0/23
      - {IpRange: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']}
      AvailabilityZone: !Select [0, !GetAZs {Ref: 'AWS::Region'}]
      Tags:
      - Key: SubnetType
        Value: Private
      - Key: Name
        Value: primary-private-givesource

  primaryPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref primaryPrivateSubnet
      RouteTableId: !Ref primaryPrivateRouteTable

  secondaryPrivateEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  secondaryPrivateNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt secondaryPrivateEip.AllocationId
      SubnetId: !Ref secondaryPublicSubnet

  secondaryPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpc
      Tags:
      - Key: Name
        Value: secondary-private-givesource

  secondaryPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref secondaryPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref secondaryPrivateNatGateway

  secondaryPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpc
      CidrBlock: !Sub
      - ${IpRange}.12.0/23
      - {IpRange: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']}
      AvailabilityZone: !Select [1, !GetAZs {Ref: 'AWS::Region'}]
      Tags:
      - Key: SubnetType
        Value: Private
      - Key: Name
        Value: secondary-private-givesource

  secondaryPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref secondaryPrivateSubnet
      RouteTableId: !Ref secondaryPrivateRouteTable

  databaseArchiveBucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    Properties:
      BucketName: !Sub firespring-database-archive-${AWS::AccountId}-${AWS::Region}
      AccessControl: Private
      BucketEncryption:
        ServerSideEncryptionConfiguration:
        - ServerSideEncryptionByDefault:
            SSEAlgorithm: AES256
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      VersioningConfiguration:
        Status: Enabled
      LoggingConfiguration:
        DestinationBucketName: !ImportValue AccessLoggingBucket
        LogFilePrefix: !Sub firespring-database-archive-${AWS::AccountId}-${AWS::Region}/

  vpcDashboard:
    Type: AWS::CloudWatch::Dashboard
    Properties:
      DashboardName: !Sub givesource-vpc-${AWS::Region}
      DashboardBody: !Sub
      - >
        {
          "start": "-P6M",
          "widgets": [
            {
              "type": "metric",
              "x": 0,
              "y": 0,
              "width": 24,
              "height": 6,
              "properties": {
                "metrics": [
                  [
                    "AWS/NATGateway",
                    "BytesInFromSource",
                    "NatGatewayId",
                    "${primaryPrivateNatGateway}",
                    {
                      "period": 3600
                    }
                  ],
                  [
                    ".",
                    "BytesInFromSource",
                    ".",
                    "${secondaryPrivateNatGateway}",
                    {
                      "period": 3600
                    }
                  ]
                ],
                "view": "timeSeries",
                "stacked": true,
                "region": "${AWS::Region}",
                "period": 300,
                "title": "NAT Gateway Bytes received from clients in your VPC"
              }
            },
            {
              "type": "metric",
              "x": 0,
              "y": 6,
              "width": 24,
              "height": 6,
              "properties": {
                "metrics": [
                  [
                    "AWS/NATGateway",
                    "BytesInFromDestination",
                    "NatGatewayId",
                    "${primaryPrivateNatGateway}",
                    {
                      "period": 3600
                    }
                  ],
                  [
                    ".",
                    "BytesInFromDestination",
                    ".",
                    "${secondaryPrivateNatGateway}",
                    {
                      "period": 3600
                    }
                  ]
                ],
                "view": "timeSeries",
                "stacked": true,
                "region": "${AWS::Region}",
                "title": "NAT Gateway Bytes received from the destination"
              }
            },
            {
              "type": "metric",
              "x": 0,
              "y": 12,
              "width": 24,
              "height": 6,
              "properties": {
                "metrics": [
                  [
                    "AWS/Billing",
                    "EstimatedCharges",
                    "Currency",
                    "USD",
                    {
                      "period": 2592000,
                      "stat": "Maximum"
                    }
                  ]
                ],
                "view": "timeSeries",
                "stacked": true,
                "region": "us-east-1"
              }
            }
          ]
        }
      - {}

  globalEncryptionKey:
    Type: AWS::KMS::Key
    Properties:
      Description: Key used to encrypt/decrypt givesource resources
      Enabled: true
      KeyPolicy:
        Id: !Sub global-encryption-key
        Version: 2012-10-17
        Statement:
        - Sid: Global Encryption Key Policy
          Effect: Allow
          Principal:
            AWS: !Ref AWS::AccountId
          Action: kms:*
          Resource: '*'
        - Sid: Global Encryption Allow Use By AWS Services
          Effect: Allow
          Principal:
            Service:
              - sns.amazonaws.com
              - events.amazonaws.com
              - cloudwatch.amazonaws.com
          Action:
            - kms:Decrypt
            - kms:GenerateDataKey*
          Resource:
            - '*'

  globalEncryptionKeyAlias:
    Type: AWS::KMS::Alias
    Properties:
      AliasName: alias/global/encryption
      TargetKeyId: !Ref globalEncryptionKey

  globalEncryptionKeyIdParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Description: The global encryption key id
      Name: /global/kms/id
      Type: String
      Value: !Ref globalEncryptionKey

Outputs:
  internetGateway:
    Description: Internet Gateway for the Givesource VPC
    Value: !Ref internetGateway
    Export:
      Name: givesource-internet-gateway

  vpc:
    Description: VPC for Givesource
    Value: !Ref vpc
    Export:
      Name: givesource-vpc

  vpcCidr:
    Description: The Cidr of the Givesource VPC
    Value: !GetAtt vpc.CidrBlock
    Export:
      Name: givesource-vpc-cidr

  aclVpc:
    Description: Default ACL for the Givesource VPC
    Value: !GetAtt vpc.DefaultNetworkAcl
    Export:
      Name: givesource-vpc-acl

  ipRange:
    Description: IP Range for the Givesource VPC
    Value: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']
    Export:
      Name: givesource-vpc-ip-range

  # TODO: REMOVEME Some day
  primaryPublicSubnet:
    Description: Primary Public Subnet for Givesource (old/misspelled export)
    Value: !Ref primaryPublicSubnet
    Export:
      Name: givsource-primary-public-subnet

  primaryPublicSubnet2:
    Description: Primary Public Subnet for Givesource
    Value: !Ref primaryPublicSubnet
    Export:
      Name: givesource-primary-public-subnet

  secondaryPublicSubnet:
    Description: Secondary Public Subnet for Givesource
    Value: !Ref secondaryPublicSubnet
    Export:
      Name: givesource-secondary-public-subnet

  # TODO: REMOVEME Some day
  primaryPrivateSubnet:
    Description: Primary Private Subnet for Givesource (old/misspelled export)
    Value: !Ref primaryPrivateSubnet
    Export:
      Name: givsource-primary-private-subnet

  primaryPrivateSubnet2:
    Description: Primary Private Subnet for Givesource
    Value: !Ref primaryPrivateSubnet
    Export:
      Name: givesource-primary-private-subnet

  secondaryPrivateSubnet:
    Description: Secondary Private Subnet for Givesource
    Value: !Ref secondaryPrivateSubnet
    Export:
      Name: givesource-secondary-private-subnet

  # TODO: Should we transition to the global key for this?
  globalRecaptchaKey:
    Description: Recaptcha key for Givesource
    Value: !GetAtt RecaptchaKey.Arn
    Export:
      Name: global-recaptcha-key

  globalCachePolicy:
    Description: Cache policy for Givesource
    Value: !GetAtt ApiCachePolicy.Id
    Export:
      Name: global-cache-policy

  globalNoCachePolicy:
    Description: No cache policy for Givesource
    Value: !GetAtt NoCachePolicy.Id
    Export:
      Name: global-no-cache-policy

  globalLongLivedCachingHeaderPolicy:
    Description: Long lived caching header policy for Givesource
    Value: !GetAtt longLivedCachingHeaderPolicy.Id
    Export:
      Name: global-long-lived-caching-header-policy

  globalMediumCachingHeaderPolicy:
    Description: Medium caching header policy for Givesource
    Value: !GetAtt mediumCachingHeaderPolicy.Id
    Export:
      Name: global-medium-caching-header-policy

  globalShortLivedCachingHeaderPolicy:
    Description: Short lived caching header policy for Givesource
    Value: !GetAtt shortLivedCachingHeaderPolicy.Id
    Export:
      Name: global-short-lived-caching-header-policy

  primaryPrivateRouteTable:
    Description: Primary private route table for Givesource
    Value: !Ref primaryPrivateRouteTable
    Export:
      Name: givesource-primary-private-route-table

  hostedZone:
    Description: Public hosted zone for Givesource
    Value: !Ref HostedZone
    Export:
      Name: givesource-hosted-zone-id

  primaryPrivateSubnetCidrBlock:
    Description: The ip range for the Primary Private Subnet
    Value: !Sub
      - ${IpRange}.10.0/23
      - {IpRange: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']}
    Export:
      Name: givesource-primary-private-subnet-cidr-block

  secondaryPrivateSubnetCidrBlock:
    Description: The ip range for the Secondary Private Subnet
    Value: !Sub
      - ${IpRange}.12.0/23
      - {IpRange: !FindInMap [IpRange, !Ref 'AWS::Region', !Ref 'AWS::AccountId']}
    Export:
      Name: givesource-secondary-private-subnet-cidr-block

  globalEncryptionKeyAlias:
    Value: !Ref globalEncryptionKeyAlias
    Export:
      Name: global-encryption-key-alias

  globalEncryptionKeyArn:
    Value: !GetAtt globalEncryptionKey.Arn
    Export:
      Name: global-encryption-key-arn

  globalEncryptionKeyId:
    Value: !Ref globalEncryptionKey
    Export:
      Name: global-encryption-key-id
